# kmscon

./: .gitignore  COPYING  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson_options.txt
.github/workflows/: release.yml
docs/: kmscon.service.in  kmsconvt@.service.in  meson.build
docs/man/: kmscon.1.xml.in  kmscon.xml
scripts/: kmscon.in
src/: font_pango.c  font_unifont.c  kmscon_conf.c  kmscon_conf.h  kmscon_main.c  kmscon_seat.c  kmscon_terminal.c  meson.build  pty.c  shl_githead.c.in  shl_hashtable.h  shl_misc.h  text_gltex.c  text_pixman.c  uterm_drm2d_video.c  uterm_drm3d_render.c  uterm_drm3d_video.c  uterm_drm_shared.c  uterm_input.c  uterm_input.h  uterm_input_internal.h  uterm_input_uxkb.c  uterm_video.c  uterm_video.h  uterm_video_internal.h
tests/: meson.build  test_common.h  test_input.c  test_output.c  test_shl.c  test_vt.c
tools/: embedded_file.py  extract_release_note.py
